_includes/manuals/1.2/4.3.3_isc_dhcp.md
ISC implementation is based on the omapi interface, which means:

* No need for root permissions on your DHCP server
* No need to restart (or "sync") your dhcp server after every modifications.


#### Configuration

* dhcpd configuration file: 
ensure you have the following line in your dhcpd.conf file (somewhere in the top first lines):
<pre>omapi-port 7911;</pre>
* configure the settings file to point to your dhcpd.conf and dhcpd.leases files (make sure they are readable by the smart-proxy user)
* make sure the omshell command (/usr/bin/omshell) can be executed by the smart-proxy user.
* make sure that /etc/dhcp and /etc/dhcp/dhcpd.conf has group foreman-proxy


#### Securing the dhcp API

The dhcpd api server will listen to any host. You might need to add a omapi_key to provide basic security. 

Example generating a key (on CentOS):
<pre>
yum install bind97
dnssec-keygen -r /dev/urandom -a HMAC-MD5 -b 512 -n HOST omapi_key
cat Komapi_key.+*.private |grep ^Key|cut -d ' ' -f2-
</pre>

1. Edit your "/etc/dhcpd.conf":

    <pre>
    omapi-port 7911;
    key omapi_key {
    algorithm HMAC-MD5;
    secret "XXXXXXXXX"; #<-The output from the generated key above.
    };
    omapi-key omapi_key;
    </pre>

2. Make sure you also add the omapi_key to your proxy's [[Smart-Proxy:Settingsyml#DHCP-section|settings.yml]]

3. Restart the dhcpd and foreman-proxy services

#### Testing

If everything works, you could browse your dhcp server data if you goto http://proxy:8443/dhcp

The next step is to set up appropriate Subnets in Foreman from the settings menu.

#### Sample dhcpd.conf
<pre>
ddns-update-style interim;
ignore client-updates;
authoritative;
allow booting;
allow bootp;

omapi-port 7911;
#Optional key:
key omapi_key {
        algorithm HMAC-MD5;
        secret "2wgoV3yukKdKMkmOzOn/hIsM97QgLTT4CLVzg9Zv0sWOSe1yxPxArmr7a/xb5DOJTm5e/9zGgtzL9FKna0NWis==";
}
omapi-key omapi_key;

subnet 10.1.1.0 netmask 255.255.255.0 {
# --- default gateway
  option routers      10.1.1.254;
  option subnet-mask  255.255.255.0;

  option domain-name    "domain.com";
  option domain-name-servers  10.1.1.1, 8.8.8.8;
  option log-servers    syslog;
  option ntp-servers    ntp;

  range dynamic-bootp 10.1.1.10 10.1.1.250;
  default-lease-time 21600;
  max-lease-time 43200;

}
</pre>
